updated _pages.yml robots

--- a/_config.yml
+++ b/_config.yml
@@ -104,16 +104,5 @@ sitemap:
 
 robots:
   user_agent: "*"
-  allow:
-    - /
-    - /categories/
-    - /about/
-    - /writings/
-    - /tags/
-  disallow:
-    - /js/
-    - /css/
-    - /images/
-  sitemaps:
-    - "https://0x3n1ty.github.io/sitemap.xml"
-
+  allow: /
+  sitemaps: "https://0x3n1ty.github.io/sitemap.xml"
